<resources>
    <string name="app_name">ProyectoVerano</string>
    <string name="Titulo">PEDIDO RESTAURANTE</string>
    <string name="Peticion1">Introduce un nombre de reserva: </string>
    <string name="Nombre">Nombre completo</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="ClienteAdmin">¿Cómo desea acceder?</string>
    <string name="btnAcceder">Acceder</string>
    <string name="btnAdmin">Administrador</string>
    <string name="btnPedir">Pedir</string>
    <string name="btnCliente">Cliente</string>
    <string name="btnReserva">Hacer reserva/pedido</string>
    <string name="btnAñadir">Añadir</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnModificar">Modificar</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnVerLista">Ver lista</string>
    <string name="Menu">Carta</string>
    <string name="Finalizar">Finalizar</string>
    <string name="Valoracion">Valoración</string>
    <string name="Ubicacion">Ubicación</string>
    <string name="Contacto">Contacto</string>
    <string name="Metodos">¿Qué desea hacer como administrador?</string>
    <string name="Añadir">Añadir plato</string>
    <string name="Eliminar">Eliminar plato</string>
    <string name="Modificar">Modificar plato</string>
    <string name="Mensaje1">CIERRE DE APP</string>
    <string name="Mensaje2">La APP se va a cerrar</string>
    <string name="Mensaje3">¿Está seguro?</string>
    <string name="PlatoCreado">El nuevo plato ha sido creado</string>
    <string name="PlatoEliminado">El plato existente ha sido eliminado</string>
    <string name="Login">Login</string>
    <string name="Entrantes">Entrantes</string>
    <string name="PrimerPlato">Primer plato</string>
    <string name="SegundoPlato">Segundo plato</string>
    <string name="Postre">Postre</string>
    <string name="Bebida">Bebida</string>
    <string name="NombrePlato">Nombre</string>
    <string name="Precio">Precio</string>
    <string name="Posicion">Posición</string>



    <string-array name="SPINNER_POSICIONES">
        <item>Bebida</item>
        <item>Entrantes</item>
        <item>Primero</item>
        <item>Segundo</item>
        <item>Postre</item>
    </string-array>
</resources>