<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/fondo"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtTitulo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/ClienteAdmin"
        android:textSize="25sp"
        android:textColor="@color/colorAzul"
        android:background="@color/colorBlanco"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAdmin"
            android:layout_marginTop="35dp"
            />

        <Button
            android:id="@+id/btnCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCliente"
            android:layout_marginTop="35dp"
            />


    </LinearLayout>

    <EditText
        android:visibility="gone"
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/Usuario"
        android:inputType="text"
        android:background="@color/colorBlanco"
        android:textColorHint="@color/colorAzulTransparencia"/>

    <EditText
        android:visibility="gone"
        android:id="@+id/etContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="35dp"
        android:layout_marginHorizontal="40dp"
        android:inputType="textPassword"
        android:background="@color/colorBlanco"
        android:hint="@string/Contraseña"
        android:textColorHint="@color/colorAzulTransparencia"/>


    <Button
        android:visibility="gone"
        android:id="@+id/btnAcceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAcceder"
        android:layout_marginTop="35dp"
        />

</LinearLayout>