<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/fondo"
    android:orientation="vertical">


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Peticion1"
        android:textSize="20sp"
        android:textColor="@color/colorAzul"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etReserva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="35dp"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/Nombre"
        android:gravity="center"
        android:backgroundTint="@color/colorAzulTransparencia"
        android:textColorHint="@color/colorAzulTransparencia"/>


    <Button
        android:id="@+id/btnReserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnReserva"
        />

</LinearLayout>