<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/fondo"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtTitulo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Eliminar"
        android:textSize="25sp"
        android:textColor="@color/colorAzul"
        android:background="@color/colorBlanco"
        android:textStyle="bold"
        />


    <AutoCompleteTextView
        android:id="@+id/ACTVNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/NombrePlato"
        android:completionThreshold="1"
        android:inputType="text"
        android:background="@color/colorBlanco"
        android:textColorHint="@color/colorAzulTransparencia"/>



    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEliminar"
        android:layout_marginTop="35dp"
        />

</LinearLayout>